--- a/template.tex
+++ b/template.tex
@@ -197,10 +197,10 @@
     %\include{chapter/bib}
 
   % 发表文章目录
-  \include{chapter/achive}
+  %\include{chapter/achive}
 
   % 致谢
-  \include{chapter/thanks}
+  %\include{chapter/thanks}
 
 %  % 作者简介
 %  \include{chapter/resume}
