--- a/template.tex
+++ b/template.tex
@@ -191,7 +191,7 @@
 
   % 参考文献
   %|- 使用 BibTeX
-    \bibliography{bib/tex}
+    \bibliography{bib/参考文献}
     %\nocite{*}
   %|-不使用 BibTeX
     %\include{chapter/bib}
